# HR-robot-localization

./: .gitignore  LICENSE  README.md
simulation/: HR_RLmain.m  Point3D.m  Point_repeat.m  Route3D.m  anchor_3D_position.m  hrm.m
simulation/pictures/: Given_route.fig  regularization_TSVD_Ri-n1_k1_unbias-j200_swin_route.fig  regularization_TSVD_Ri-n1_k1_unbias-j200_swin_route_zErr.fig  regularization_new-TR_Ri-optimal_k1_unbias-j200_point.fig  regularization_new-TR_Ri-optimal_k1_unbias-j200_point_zErr.fig
uwb_localization_dwm/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
uwb_localization_dwm/config/: params.yaml
uwb_localization_dwm/launch/: calibration.launch  demo_pub_dis.launch  localization.launch
uwb_localization_dwm/msg/: UWBrange.msg
uwb_localization_dwm/rviz/: calibration.rviz  uwb_localization.rviz
uwb_localization_dwm/src/: telep_jackal_key.cpp
uwb_localization_dwm/src/scripts/: __init__.py  calibration.py  dwm1001c_apiCommands.py  filtered_distance.py  ftr.py  get_uwb_data.py  hrm.py  kabsch_umeyama.py  lsm.py  path_result_analysis.py  path_update.py  publish_paths_ref_poses.py  save_bag_topics_dis.py  save_plot_path_results.py  spectral_radius.py  uwb_dis_statistic.py  uwb_fuhry_tihkionov.py  uwb_localization.py  uwb_lsm.py  uwb_particle_filter.py  uwb_range.py  uwb_ring.py
